# sme-jit-core

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  latency_table.jsonl
benches/: crucible_bench.rs
heist/: amx_encoding_audit.py  amx_runner.c  capture_operands.py  extract_all.py  heist.py  list_exports.py
scripts/: train_mnist.py
src/: api.rs  cpu_state.rs  crucible.rs  emitter.rs  inference.rs  jit_page.rs  leaf.rs  lib.rs  main.rs  probe.rs  signal_handler.rs  sink.rs  weights.rs
