[package]
name = "sme-jit-core"
version = "0.1.0"
edition = "2024"
description = "Zero-overhead Rust JIT harness for ARM SME on Apple Silicon M4"
repository = "https://github.com/dawnstate/sme-jit-core"

# ── Library crate (re-exports harness modules for benchmarks / integration tests)
[lib]
name = "sme_jit_core"
path = "src/lib.rs"

# ── Binary crate (gate runner)
[[bin]]
name = "sme-jit-core"
path = "src/main.rs"

# ── Runtime dependencies
[dependencies]
libc        = "0.2"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"

# ── Dev / bench dependencies
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

# ── Benchmark target
[[bench]]
name    = "crucible_bench"
harness = false
